[metadata]
name = HLRL
author = Chainso
url = https://github.com/Chainso/HLRL
version = file: version.txt
description = Reinforcement learning library
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: MIT License
    Programming Langauge :: Python 3
    Programming Language :: Python 3.6

[options]
packages = hlrl
test_suite = tests
install_requires =
    torch>=1.1
    d3dshot
    tensorboard

[options.extras_require]
cuda = cudatoolkit>=10.2
tests = bsuite
examples = gym