[metadata]
name = HLRL
author = Chainso
url = https://github.com/Chainso/HLRL
version = file: version.txt
description = Reinforcement learning library
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Langauge :: Python 3
    Programming Language :: Python 3.8

[options]
packages = hlrl
test_suite = tests
python_requires = >=3.8
install_requires =
    torch>=1.4
    tensorboard

[options.extras_require]
cuda = cudatoolkit>=10.2
vision = d3dshot
tests = bsuite
examples =
    gym~=0.21.0
    pyyaml
docs =
    sphinx
    sphinx-rtd-theme